<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_centerVertical="true">


    <ImageView
        android:id="@+id/restaurant_profile_image_view"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_camera_alt_teal_700_18dp"
        android:adjustViewBounds="true"
        android:background="@color/white"
       />
    <ImageButton
        android:id="@+id/add_image_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_add_a_photo_black_24dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/restaurant_name_edit_text"
        android:hint="@string/restaurant_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/restaurant_email_edit_text"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="textPassword"
        android:id="@+id/restaurant_password_edit_text"
        android:hint="@string/password"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/restaurant_set_location_button"
        android:text="@string/location"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/register"
        android:id="@+id/restaurant_register_button"
        />
</LinearLayout>