<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerVertical="true">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@color/white"
        android:layout_gravity="center_horizontal"
        android:id="@+id/profile_picture_image_view"/>
    <ImageButton
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_a_photo_black_24dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/add_profile_pic_image_button"
        />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"/>

    <EditText
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:id="@+id/email_edit_text"/>

    <EditText
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/password_edit_text"/>



    <Button
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register_button"
        />


</LinearLayout>
